# graph_course_unn

./: README.md  Tasks-2023.md  Tasks-2024.md  Tasks.md  Testing.md  Useful_links.md  cluster.md
igraph_examples/: CMakeLists.txt  Ragusa18.mtx
igraph_examples/include/: igraph_mtx_reader.h  mmio.h
igraph_examples/python/: igraph_generate.py  print_matrix.py
igraph_examples/src/: example_3_bfs.c  example_4_sssp.c  example_graph_generators.c  example_mtx_reader.c  example_sssp.c  igraph_mtx_reader.c  read_mtx_with_edgelist.c
lectures/: presentation.pptx  Инструкция по Galois.txt
